# offerhelper

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.trae/documents/: 前端产品需求文档.md  前端技术架构文档.md
apps/api/: main.py
apps/worker/: celery_app.py
artifacts/acceptance_prediction/: baseline-offer-acceptance-0.3.0.json  baseline-offer-acceptance-0.3.0.pkl  baseline-offer-acceptance-0.4.0.json  baseline-offer-acceptance-0.5.0.json  baseline-offer-acceptance-0.5.0.pkl  baseline-offer-acceptance-0.6.0.json  baseline-offer-acceptance-0.6.0.pkl  baseline-offer-acceptance-0.7.0.json  baseline-offer-acceptance-0.7.1.json  baseline-offer-acceptance-0.7.2.json  baseline-offer-acceptance-0.7.3.json  baseline-offer-acceptance-0.7.3.pkl  baseline-offer-acceptance-0.7.4.json  baseline-offer-acceptance-0.7.5.json
deployments/compose/: docker-compose.local.yml
deployments/docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
migrations/: env.py
migrations/versions/: 20260620_0001_initial_schema.py  20260620_0002_strategy_offer_schema.py  20260620_0003_equity_and_reports_schema.py  20260620_0004_acceptance_prediction_schema.py  20260620_0005_model_registry_schema.py  20260620_0006_offer_outcome_schema.py  20260620_0007_training_audit_schema.py  20260620_0008_governance_events_schema.py  20260620_0009_governance_review_schema.py  (+1 more)
scripts/: export_acceptance_model_artifact.py  seed_demo_data.py
(+89 files in other folders)
