[project]
name = "offer-compensation-engine"
version = "0.1.0"
description = "Enterprise AI offer compensation decision engine MVP iteration 1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.0,<5.7.0",
    "fastapi>=0.138.0,<0.139.0",
    "uvicorn[standard]>=0.49.0,<0.50.0",
    "pydantic-settings>=2.14.0,<2.15.0",
    "sqlalchemy>=2.0.51,<2.1.0",
    "alembic>=1.18.0,<1.19.0",
    "redis>=5.2.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1,<0.29.0",
    "pytest>=9.1.1,<9.2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
